<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 aSoft
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<!DOCTYPE resources [
    <!ENTITY appname "TimesApp">
    ]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="refresh_list">Refresh List</string>
    <string name="set_duration_for">Set duration for </string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="shortcut_created">Shortcut added to home screen</string>
    <string name="tap_target_apps_title">Click to add app shortcut to home screen</string>
    <string name="tap_target_apps_title_flipped">Click to launch app</string>
    <string name="tap_target_apps_message">Long click to launch app</string>
    <string name="tap_target_apps_message_flipped">Long click to add app shortcut to home screen</string>
    <string name="pref_display_tap_target_apps">display_tap_target_apps</string>
    <string name="pref_overlay_permission_update">pref_overlay_permission_update</string>
    <string name="usage_permission_title">Usage Permission Access</string>
    <string name="usage_permission_message">&appname; requires access to your app usage statistics for a better experience. The only data accessed is the name of the app being used.No data is saved.</string>
    <string name="overlay_permission_message">&appname; requires permission to display over other apps in order to display a dialog when specified time has passed (Android 10 onwards)</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="usage_permission_instruction">Select &appname; in the list and allow usage tracking</string>
    <string name="overlay_permission_instruction">Select &appname; in the list and allow permission to display over other apps</string>
    <string name="usage_permission_pref">usage_permission_pref</string>
    <string name="overlay_permission_pref">overlay_permission_pref</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="usage_never_ask_again_pref_key">usage_never_ask_again</string>
    <string name="pref_app_time_label">Default time for app timers</string>
    <string name="pref_app_time_key">pref_app_time_default</string>
    <string name="app_closed_notification_title">was closed</string>
    <string name="app_closed_notification_subtitle">Tap to remove notification</string>
    <string name="TARGET_APP_TITLE_KEY">target_app_title</string>
    <string name="no_limit">No Limit</string>
    <string name="app_running_service_notif_text">&appname; is keeping track of time in the background</string>
    <string name="tap_for_more_info_foreground_notif">Tap for more info</string>
    <string name="why_see_notification">Why do I need to see this notification?</string>
    <string name="why_see_notification_ans">As a security feature of the Android platform, background tasks cannot be run efficiently without showing a notification. This notification is required to keep track of the time and keep your phone usage time in control.</string>
    <string name="pref_shortcut_icon_key">pref_shortcut_icon</string>
    <string name="pref_shortcut_icon">Shortcut timer icon</string>
    <string name="pref_shortcut_icon_hint">Add timer icon to home screen app shortcuts</string>
    <string name="set_default_duration">Set default duration</string>
    <string name="set">Set</string>
    <string name="is_first_start">isFirstStart</string>
    <string name="tutorial_seen_key">tutorial_seen</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="pref_display_tap_target_time_dialog">display_tap_target_time_dialog</string>
    <string name="pref_tutorial_key">pref_tutorial_key</string>
    <string name="pref_tutorial_label">Display tutorials</string>
    <string name="intro_page2_title">Replace app shortcuts</string>
    <string name="intro_page2_desc">Add new app shorcuts to the home screen using &appname;</string>
    <string name="intro_page3_title">Set a timer</string>
    <string name="intro_page3_desc">Before starting an app,specify the time you want to spend on it</string>
    <string name="intro_page4_title">Get notified</string>
    <string name="intro_page4_desc">A dialog will pop up when the specified time has passed</string>
    <string name="intro_page5_title">All Set!</string>
    <string name="intro_page5_desc">Press Done to begin</string>
    <string name="intro_page1_desc">Take control of your phone usage</string>
    <string name="notif_app_stopped_channel_name">App Stopped Notification</string>
    <string name="pref_notification_done_key">pref_notification_done</string>
    <string name="pref_notification_done_hint">Add button in notification to stop timer</string>
    <string name="pref_notification_done">Stop timer button</string>
    <string name="pref_flip_long_press_key">pref_flip_long_press_key</string>
    <string name="pref_flip_long_press_hint">Add shortcuts using long click\nLaunch app on single click</string>
    <string name="pref_flip_long_press">Flip long click action</string>
    <string name="intro_activity_mode">intro_activity_mode</string>
    <string name="intro_activity_mode_tutorial">intro_activity_mode_tutorial</string>
    <string name="intro_activity_mode_overlay_update">intro_activity_mode_overlay</string>
</resources>
