<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="Usage Permission Required"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:textSize="20sp"
        android:padding="32dp"
        android:textColor="@color/white"
        android:text="@string/usage_permission_message"/>

    <Button
        android:id="@+id/btn_usage_permission"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/grant_permission" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="76dp"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:checked="false"
        android:id="@+id/cb_permssion_granted"
        android:text="@string/permission_granted"
        />
</LinearLayout>
