<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="Usage Permission Required"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="32dp"
        android:textColor="@color/white"
        android:text="@string/usage_permission_message"/>

    <Button
        android:id="@+id/btn_usage_permission"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/grant_permission" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/permission_granted"
        android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:id="@+id/iv_permission_slide_check_state"
            android:src="@drawable/ic_clear_red_24dp"/>
    </LinearLayout>
    <!--<CheckBox-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_marginBottom="76dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:clickable="false"-->
        <!--android:textSize="16sp"-->
        <!--android:textColor="@color/white"-->
        <!--android:checked="false"-->
        <!--android:id="@+id/cb_permssion_granted"-->
        <!--android:text="@string/permission_granted"-->
        <!--/>-->
</LinearLayout>
