<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 aSoft
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_pref_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingTop="24dp"
        android:paddingEnd="8dp"
        android:paddingStart="24dp"
        android:text="@string/set_default_duration"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/seekarc_container_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.triggertrap.seekarc.SeekArc
            android:id="@+id/seekArc_dialog_pref"
            android:layout_width="wrap_content"
            android:layout_height="356dp"
            android:layout_gravity="center"
            android:paddingEnd="72dp"
            android:paddingStart="72dp"
            seekarc:arcColor="@color/white"
            seekarc:arcWidth="1dp"
            seekarc:max="60"
            seekarc:progressColor="@color/white"
            seekarc:progressWidth="10dp"
            seekarc:rotation="0"
            seekarc:roundEdges="true"
            seekarc:startAngle="0"
            seekarc:sweepAngle="360"
            seekarc:thumb="@drawable/seekbar_drawable_thumb"
            seekarc:touchInside="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_seekarc_progress_pref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/white"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/tv_seekarc_progress_m_label_pref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="m"
                android:textColor="@color/white"
                android:textSize="36sp" />
        </LinearLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btn_pref_dialog_start"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/set"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_pref_dialog_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btn_pref_dialog_start"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</LinearLayout>